--- a/tdata.html
+++ b/tdata.html
@@ -401,7 +401,7 @@
                 <td></td>
                 <td>Mr. Patil</td>
                 <td>mpatil@gmail.com</td>
-                <td>Social Scienc</td>
+                <td>Social Science</td>
                 <td>+918796312097</td>
                 <td>
                   <a
