--- a/tform.html
+++ b/tform.html
@@ -84,6 +84,7 @@
             opacity: 5;
         }
     </style>
+    <title>Teachers Registration Form</title>
 </head>
 
 <body>
@@ -124,7 +125,7 @@
                 <label>
                     Gender :
                 </label><br>
-                <input type="radio" style="border-radius:7px" value="Male" name="gender" checked> Male
+                <input type="radio" style="border-radius:7px" value="Male" name="gender"> Male
                 <input type="radio" style="border-radius:7px" value="Female" name="gender"> Female
                 <input type="radio" style="border-radius:7px" value="Other" name="gender"> Other
 
