--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <div class="header">
     <img class="logoimg" src="logo.png">
     <!-- <a href="#default" class="logo"> &nbsp; ABC ENGLISH MEDIUM SCHOOL</a> -->
+
     <div class="header-right">
-      <a class="active" href="#home">Home</a>
+      <a class="active" id="home" href="#home">Home</a>
       <a href="login.html">Login</a>
       <a href="#contact">Contact</a>
       <a href="#AboutUs">About</a>
@@ -50,13 +51,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="image/slide2.jpg" class="d-block w-50" style="margin-left: 25%;" alt="...">
+              <img src="image/slide2.jpg" class="d-block w-50" style="margin-left: 5%;border-radius: 3%;" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="image/slide3.jpg" class="d-block w-50" style="margin-left: 25%; " alt="...">
+              <img src="image/slide3.jpg" class="d-block w-50" style="margin-left: 5%;border-radius: 3%;" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="image/slide1.jpg" class="d-block w-50" style="margin-left: 25%; " alt="...">
+              <img src="image/slide1.jpg" class="d-block w-50" style="margin-left: 5%; border-radius: 3%;" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -81,9 +82,9 @@
           served.</a></em>
     </div>
     <br><br><br>
-    <div class="wsite-section-elements">
+    <div class="wsite-section-elements ">
       <h2 id="AboutUs" class="wsite-content-title"
-        style="color: rgb(163, 240, 252); font-size: 2.3em ;text-align: center">
+        style="color: rgb(213, 249, 255);font-family:serif; font-size: 3em ;text-align: center">
         About Us<br />
       </h2>
 
@@ -107,7 +108,7 @@
       </div>
 
       <h2 class="wsite-content-title" style="text-align: center">
-        <span style="color:  rgb(163, 240, 252);font-size: 0.8em; font-weight: 700">About the ABC Education
+        <span style="color:  rgb(191, 244, 252);font-size: 1em; font-weight: 700">About the ABC Education
           Foundation</span>
       </h2>
 
@@ -139,11 +140,11 @@
 
     </div>
 
-    <div class="footer-wrap">
+    <div class="footer-wrap bg-gradient rounded">
       <div class="site-footer container">
         <div class="wsite-elements wsite-footer">
           <h2 id="contact" class="wsite-content-title" style="text-align:left;"><a
-              style="font: size 1.5em;color:aliceblue;">CONTACT US</a></h2>
+              style="font-family: monospace; font: size 1.5em;color:goldenrod;">CONTACT US</a></h2>
 
           <div>
             <div class="wsite-multicol">
@@ -155,10 +156,15 @@
 
 
 
-                        <div class="paragraph" style="text-align:left;"><a style="color:#f5f5f5"><strong>Phone -
-                            </strong>&nbsp; (+91) 92325-55566 <br><br><strong >Email - </strong>&nbsp;
-                            info@abcfoundation.org</a></div>
-
+                        <div class="paragraph" style="text-align:left;"><a style="color:#f5f5f5"><strong
+                              style="color:goldenrod">Phone -
+                            </strong>&nbsp; (+91) 92325-55566 <br><br><strong style="color:goldenrod"> <em
+                                class=" fa-envelope"></em>Email -
+                            </strong>&nbsp;
+                            info@abcfoundation.org<br><br><strong style="color:goldenrod">Address - </strong>&nbsp;
+                            Survery No : 335/1, &nbsp;&nbsp; Opp: Bambhori Octroi Naka, NH6, Jalgaon 425002.
+                            Maharashtra.</a></div>
+                        <br><br>
 
 
                       </td>
@@ -168,28 +174,26 @@
 
                         <div class="wsite-spacer" style="height:74px;"></div>
 
-                        <div style="text-align:right;">
-                          <div style="height:10px;overflow:hidden"></div>
-                          <span class="wsite-social wsite-social-default"><a
-                              class="first-child wsite-social-item wsite-social-facebook"
-                              href="// https://www.facebook.com/ABCEducationFoundation/)facebook.com" target="_blank"
-                              alt="Facebook" aria-label="Facebook"><span class="wsite-social-item-inner"></span></a><a
-                              class="last-child wsite-social-item wsite-social-mail" href="// info@abcedfoundation.org"
-                              target="_blank" alt="Mail" aria-label="Mail"><span
-                                class="wsite-social-item-inner"></span></a></span>
-                          <div style="height:0px;overflow:hidden"></div>
-                        </div>
 
-                        <div class="paragraph" style="text-align:right;"><a style="font-size:1">©COPYRIGHT MH-19. ALL
-                            RIGHTS RESERVED.</a></div><br><br </td>
+
+                        <div class="paragraph" style="text-align:right;"><a
+                            style="font-size:4;color:aliceblue;font-weight: 700;">©COPYRIGHT MH-19. ALL
+                            RIGHTS RESERVED.</a></div>
+                      </td>
+                      
                     </tr>
                   </tbody>
                 </table>
 
+
               </div>
             </div>
           </div>
+          <button type="button" class="btn btn-danger float-end btn-lg" href="#home">
+            <i class="fas fa-arrow-up"></i>
+          </button>
         </div>
+        
       </div>
     </div>
 </body>
