--- a/student.html
+++ b/student.html
@@ -10,6 +10,9 @@
   <link href="style.css" rel="stylesheet">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="javascript.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
   <title>Student</title>
 </head>
@@ -24,8 +27,8 @@
   </div>
   <div class="men_ex">
     <ul>
-      <li><a href="#">Update Profile</a></li>
-      <li><a href="#">Change Password</a></li>
+      <li><a href="#updateProfileModal" class="delete" data-toggle="modal">Update Profile</a></li>
+      <!-- <li><a href="#">Change Password</a></li> -->
     </ul>
   </div>
 
@@ -35,7 +38,7 @@
       <div class="card-body">
         <h5 class="card-title" style="text-align: center; font-size:1.6em;">View Marks</h5>
         <br><br><br>
-        <p class="card-text" style="text-align: center;"><a href="#"><button type="button" class="btn btn-danger" style="font-weight:600;" >Click
+        <p class="card-text" style="text-align: center;"><a href="#viewMarksModal" class="delete" data-toggle="modal"><button type="button" class="btn btn-danger" style="font-weight:600;" >Click
               Here</button></a></p>
       </div>
     </div>
@@ -44,7 +47,7 @@
       <div class="card-body">
         <h5 class="card-title" style="text-align:center; font-size:1.6em;">View Notice</h5>
         <br><br><br>
-        <p class="card-text" style="text-align:center;"><a href="#"><button type="button" class="btn btn-warning" style="font-weight:600;">Click
+        <p class="card-text" style="text-align:center;"><a href="#viewNoticeModal" class="delete" data-toggle="modal"><button type="button" class="btn btn-warning" style="font-weight:600;">Click
               Here</button></a></p>
       </div>
     </div>
@@ -53,11 +56,108 @@
       <div class="card-body">
         <h5 class="card-title" style="text-align:center; font-size:1.6em;">Pay Fees</h5>
         <br><br><br>
-        <p class="card-text" style="text-align:center;"><a href="#"><button type="button" class="btn btn-primary" style="font-weight:600;">Click
+        <p class="card-text" style="text-align:center;"><a href="#payFeesModal" class="delete" data-toggle="modal"><button type="button" class="btn btn-primary" style="font-weight:600;">Click
               Here</button></a></p>
       </div>
     </div>
   </div>
+
+  <!-- View Notice HTML -->
+  <div id="viewNoticeModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form>
+          <div class="modal-header">
+            <h4 class="modal-title">Notice</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+              &times;
+            </button>
+          </div>
+          <div class="modal-body">
+            <p></p>
+            <p class="text-warning">
+              <p class="paragraph bg-primary text-light p-3 rounded">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum asperiores unde vel animi magni sed! Facere esse fugiat itaque ipsam quod asperiores. Dignissimos, necessitatibus amet ea consequatur ab tempora fuga!</p>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <input type="button" class="btn btn-default" data-dismiss="modal" value="Close" />
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+   <!-- View Marks HTML -->
+   <div id="viewMarksModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form>
+          <div class="modal-header">
+            <h4 class="modal-title">Marks</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+              &times;
+            </button>
+          </div>
+          <div class="modal-body">
+            <p></p>
+            <p class="text-dark">Congratulations! You’ve run the course and passed the exams! There are no secret of success. It is the result of preparation, hard work and learning from failure. Well done!
+              <p class="paragraph"><span class="bg-success p-2 rounded"> Marks :- 92.19 </span><br><br><span style="padding-left: 250px;color: black;">Love from JALGAON❤️</span></p>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <input type="button" class="btn btn-default" data-dismiss="modal" value="Close" />
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </body>
+
+<!-- Pay Fees HTML -->
+<div id="payFeesModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Fees Section</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+            &times;
+          </button>
+        </div>
+        <div class="modal-body">
+          <p></p>
+          <p class="text-black text-monospace">Feching your data...
+            <p class="text-center  p-3 text-light"><span class="bg-success p-2">Balance : 15000 Rs </span><br><br><span class="bg-danger p-2 rounded-3"> Remaining fees to be paid : 10000 Rs</span><br><br><a href="https://www.onlinesbi.com/" >Click here to pay</span></p>
+          </p>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Close" />
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Update Profile HTML -->
+<div id="updateProfileModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Update Profile</h4>
+        </div>
+        <div class="modal-body text-dark">
+          <p class="p-1">First Name : <span style="padding-left: 50px;"><input type="text" ></p></span> 
+          <p class="p-1">Last Name : <span style="padding-left: 51px;"><input type="text" ></p></span>
+          <p class="p-1">Change Password : <span style="padding-left: 5px;"><input type="text" ></p></span>
+          <p class="p-1">Confirm Password : <span style="padding-left: 4px;"><input type="text" ></p></span>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+          <input type="submit" class="btn btn-success" value="Update" />
+        </div>
+      </form>
+    </div>
+  </div>
 
 </html>
