--- a/teacher.html
+++ b/teacher.html
@@ -1,106 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link href="style.css" rel="stylesheet" />
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="javascript.js"></script>
 
-    <title>Teacher</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link href="style.css" rel="stylesheet" />
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="javascript.js"></script>
 
-  <body class="teacher">
-    <div class="header">
-      <a href="#default" class="logo"> &nbsp;Welcome Teacher...</a>
-      <div class="header-right">
-        <a type="button" class="fademet">My Profile</a>
-        <a class="active" href="login.html">Logout</a>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+  <title>Teacher</title>
+</head>
+
+<body class="teacher">
+  <div class="header">
+    <a href="#default" class="logo"> &nbsp;Welcome Teacher...</a>
+    <div class="header-right">
+      <a type="button" class="fademet">My Profile</a>
+      <a class="active" href="login.html">Logout</a>
+    </div>
+  </div>
+  <div class="men_ex">
+    <ul>
+      <li><a href="#updateProfileModal" class="delete" data-toggle="modal">Update Profile</a></li>
+      <!-- <li><a href="#">Change Password</a></li> -->
+    </ul>
+  </div>
+
+  <div class="container-fluid d-flex" style="margin-top: 10%">
+    <div class="card text-white bg-body mb-3" style="width: 22%; height: 200px; margin: auto">
+      <div class="card-header" style="margin: auto"></div>
+      <div class="card-body">
+        <h5 class="card-title" style="text-align: center; font-size: 1.6em">
+          Add Marks
+        </h5>
+        <br /><br /><br />
+        <p class="card-text" style="text-align: center">
+          <a href="addmarks.html"><button type="button" class="btn btn-danger" style="font-weight: 600">
+              Click Here
+            </button></a>
+        </p>
       </div>
     </div>
-    <div class="men_ex">
-      <ul>
-        <li><a href="#">Update Profile</a></li>
-        <li><a href="#">Change Password</a></li>
-      </ul>
+    <div class="card text-white bg-body mb-3" style="width: 22%; height: 200px; margin: auto">
+      <div class="card-header" style="margin: auto"></div>
+      <div class="card-body">
+        <h5 class="card-title" style="text-align: center; font-size: 1.6em">
+          Add Notice
+        </h5>
+        <br /><br /><br />
+        <p class="card-text" style="text-align: center">
+          <a href="#addNoticeModal" class="delete" data-toggle="modal"><button type="button" class="btn btn-warning"
+              style="font-weight: 600">
+              Click Here
+            </button></a>
+        </p>
+      </div>
     </div>
+    <div class="card text-white bg-body mb-3" style="width: 22%; height: 200px; margin: auto">
+      <div class="card-header" style="margin: auto"></div>
+      <div class="card-body">
+        <h5 class="card-title" style="text-align: center; font-size: 1.6em">
+          Manage Student
+        </h5>
+        <br /><br /><br />
+        <p class="card-text" style="text-align: center">
+          <a href="sdata.html"><button type="button" class="btn btn-primary" style="font-weight: 600">
+              Click Here
+            </button></a>
+        </p>
+      </div>
+    </div>
+  </div>
 
-    <div class="container-fluid d-flex" style="margin-top: 10%">
-      <div
-        class="card text-white bg-body mb-3"
-        style="width: 22%; height: 200px; margin: auto"
-      >
-        <div class="card-header" style="margin: auto"></div>
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center; font-size: 1.6em">
-            Add Marks
-          </h5>
-          <br /><br /><br />
-          <p class="card-text" style="text-align: center">
-            <a href="#"
-              ><button
-                type="button"
-                class="btn btn-danger"
-                style="font-weight: 600"
-              >
-                Click Here
-              </button></a
-            >
-          </p>
-        </div>
-      </div>
-      <div
-        class="card text-white bg-body mb-3"
-        style="width: 22%; height: 200px; margin: auto"
-      >
-        <div class="card-header" style="margin: auto"></div>
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center; font-size: 1.6em">
-            Add Notice
-          </h5>
-          <br /><br /><br />
-          <p class="card-text" style="text-align: center">
-            <a href="#"
-              ><button
-                type="button"
-                class="btn btn-warning"
-                style="font-weight: 600"
-              >
-                Click Here
-              </button></a
-            >
-          </p>
-        </div>
-      </div>
-      <div
-        class="card text-white bg-body mb-3"
-        style="width: 22%; height: 200px; margin: auto"
-      >
-        <div class="card-header" style="margin: auto"></div>
-        <div class="card-body">
-          <h5 class="card-title" style="text-align: center; font-size: 1.6em">
-            Manage Student
-          </h5>
-          <br /><br /><br />
-          <p class="card-text" style="text-align: center">
-            <a href="sdata.html"
-              ><button
-                type="button"
-                class="btn btn-primary"
-                style="font-weight: 600"
-              >
-                Click Here
-              </button></a
-            >
-          </p>
-        </div>
+  <!-- Add Notice HTML -->
+  <div id="addNoticeModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form>
+          <div class="modal-header">
+            <h4 class="modal-title">Add Notice</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+              &times;
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Add Notice Below</p>
+            <p class="text-warning">
+              <textarea style="border-radius: 7px" cols="65" rows="5" placeholder="Current Address" id="address"
+                required></textarea>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+            <input type="submit" class="btn btn-success" value="Add" />
+          </div>
+        </form>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
+<!-- Update Profile HTML -->
+<div id="updateProfileModal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Update Profile</h4>
+        </div>
+        <div class="modal-body text-dark">
+          <p class="p-1">First Name : <span style="padding-left: 50px;"><input type="text" ></p></span> 
+          <p class="p-1">Last Name : <span style="padding-left: 51px;"><input type="text" ></p></span>
+          <p class="p-1">Change Password : <span style="padding-left: 5px;"><input type="text" ></p></span>
+          <p class="p-1">Confirm Password : <span style="padding-left: 4px;"><input type="text" ></p></span>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+          <input type="submit" class="btn btn-success" value="Update" />
+        </div>
+      </form>
+    </div>
+  </div>
+
 </html>
